# flasquelistan

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  LICENSE  Pipfile  README.md  app.py  babel.cfg  build_songbook.sh  config.py  docker-compose.dev.yml  docker-compose.yml  extract_babel.sh  messages.pot  process_gifs.py  pyproject.toml  requirements.in  requirements.txt  start_dev_server.sh  start_first_time.sh  strequetoflasque.py  update_babel.sh  update_translations.sh
.github/workflows/: test.yml
docs/: DEPLOYMENT.md  ROADMAP.md
flasquelistan/: babel.cfg  cachebust.py  discord.py  factory.py  forms.py  log.py  messages.pot  models.py  util.py
flasquelistan/models/: __init__.py  apikey.py  social.py  transactions.py  user.py
flasquelistan/scripts/: __init__.py  import_nickname_changes.py  normalize_phone_numbers.py  testdata.py
flasquelistan/static/: manifest.json
flasquelistan/static/css/: admin.css  goofs.css  paperlist.css  payments.css  quotes.css  streque.css  style.css
flasquelistan/static/images/: emma.webm
flasquelistan/static/js/: addStreque.js  admin.js  bulktransactionMessage.js  calculateStandardglas.js  common.js  confirmDialog.js  history.js  quoteFilter.js  setFocusLoginPage.js  streque.js  swishPay.js  toggleVisibility.js  userFilter.js  visibilityToggle.js  voidTransaction.js
flasquelistan/static/js/lib/: confetti.browser.min.js
flasquelistan/templates/: add_quote.html  api_keys.html  article_description.html  base.html  change_email_or_password.html  change_profile_picture.html  discord.html  edit_api_key.html  edit_profile.html  flashes.html  gallery.html  history.html  layout.html  macros.html  misc.html  more.html  notifications.html  paperlist.html  payments.html  quote.html  quotes.html  show_group.html  show_profile.html  strequelistan.html  transfer_standalone.html  upload_profile_picture.html  user_gallery.html  user_history.html  user_nicknames.html
flasquelistan/templates/admin/: add_user.html  articles.html  bulk_transactions.html  confirm_bulk_transactions.html  edit_article.html  edit_group.html  edit_quote.html  groups.html  index.html  layout.html  multi_transactions.html  negative_balance_mail.jinja  negative_balance_mail.jinja2  quotes.html  requests.html  spam.html  transactions.html  users.html
flasquelistan/templates/auth/: auth_layout.html  email_verification.jinja2  login.html  password_reset_email.jinja2  register.html  register_email.jinja2  reset.html  reset_token.html
flasquelistan/templates/goofs/: random_picture.html
flasquelistan/templates/strequeadmin/: add_user.html  articles.html  bulk_transactions.html  confirm_bulk_transactions.html  edit_article.html  edit_group.html  edit_quote.html  groups.html  index.html  negative_balance_mail.jinja2  nicknames.html  quote_reactions.html  quotes.html  requests.html  spam.html  stats.html  streque_stats.html  transactions.html  users.html
flasquelistan/translations/en/LC_MESSAGES/: messages.mo  messages.po
flasquelistan/translations/se/LC_MESSAGES/: messages.mo  messages.po
flasquelistan/translations/sv_SE/LC_MESSAGES/: messages.mo  messages.po
flasquelistan/views/: admin.py  api.py  auth.py  discord_oauth.py  gallery.py  goofs.py  misc.py  more.py  notifications.py  profile.py  quotes.py  serviceworker.py  songbook.py  strequelistan.py  transfers.py
migrations/versions/: 2f6230539132_.py
misc/: transfer_user.py
tests/: api_test.py  auth_test.py  conftest.py  discord_test.py  flasquelistan_test.py  flasquelistan_tests.py  forms_test.py  gallery_test.py  helpers.py  models_test.py  notification_test.py  poke_ux_test.py  profile_test.py  transactions_model_test.py  translations_test.py  util_test.py  views_test.py
tests/models/: apikey_test.py  social_test.py  transactions_test.py  user_test.py
tests/views/: admin_test.py  api_test.py  auth_test.py  discord_test.py  flask_admin_test.py  goofs_test.py  locale_test.py  notifications_test.py  profile_test.py  quotes_test.py  strequelistan_test.py  transfers_test.py
