[project]
name = "flasquelistan"
version = "1.0.0"
description = "Implementation of Strequelistan with Flask and progressive enhancement 🍻"
readme = "README.md"
requires-python = ">=3.9, <3.11"
dependencies = [
    "bcrypt",
    "click<8.2.0",
    "ffmpy",
    "flask<2.3.0",
    "flask-admin",
    "flask-babel<3.0.0",
    "flask-HTTPAuth",
    "flask-login",
    "flask-reuploaded",
    "flask-socketio",
    "flask-sqlalchemy>=3.1",
    "flask-wtf>=1.2",
    "gevent",
    "gevent-websocket",
    "gunicorn",
    "markdown",
    "phonenumbers",
    "pillow",
    "requests",
    "requests-oauthlib",
    "sh",
    "sqlalchemy>=2.0",
    "vobject",
    "werkzeug<3.0.0",
    "wtforms[email]>=3.1",
]

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "pytest-xdist",
    "ruff",
]

[tool.ruff]
# Matches the dominant style of the existing code; do not reformat wholesale.
line-length = 100

[tool.ruff.lint]
# Deliberately minimal: syntax errors, undefined names, unused imports/
# variables (F), basic pycodestyle errors (E4/E7/E9), and bare excepts
# (E722). Widen once the codebase is cleaner.
select = ["E4", "E7", "E9", "F", "E722"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*_test.py"
