[project]
name = "flasquelistan"
version = "1.0.0"
description = "Implementation of Strequelistan with Flask and progressive enhancement 🍻"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "bcrypt",
    "click>=8.1",
    "ffmpy",
    "flask>=3.1",
    "flask-admin[sqlalchemy]>=2.0",
    "flask-babel>=4.0",
    "flask-HTTPAuth",
    "flask-login",
    "flask-reuploaded",
    "flask-socketio",
    "flask-sqlalchemy>=3.1",
    "flask-wtf>=1.2",
    "gevent",
    "gevent-websocket",
    "gunicorn",
    "markdown",
    "phonenumbers",
    "pillow",
    "requests",
    "requests-oauthlib",
    "sh",
    "sqlalchemy>=2.0",
    "vobject",
    "werkzeug>=3.1",
    "wtforms[email]>=3.1",
]

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "pytest-xdist",
    "ruff",
]

[tool.ruff]
# Matches the dominant style of the existing code; do not reformat wholesale.
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F",  # full pycodestyle + pyflakes
    "I",    # import sorting (isort)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*_test.py"
