[project]
name = "flasquelistan"
version = "1.0.0"
description = "Implementation of Strequelistan with Flask and progressive enhancement 🍻"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "bcrypt",
    "click>=8.1",
    "ffmpy",
    "flask>=3.1",
    "flask-admin[sqlalchemy]>=2.0",
    "flask-babel>=4.0",
    "flask-HTTPAuth",
    "flask-login",
    "flask-reuploaded",
    "flask-socketio",
    "flask-sqlalchemy>=3.1",
    "flask-wtf>=1.2",
    "gevent",
    "gevent-websocket",
    "gunicorn",
    "markdown",
    "phonenumbers",
    "pillow",
    "requests",
    "requests-oauthlib",
    "sh",
    "sqlalchemy>=2.0",
    "vobject",
    "werkzeug>=3.1",
    "wtforms[email]>=3.1",
]

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "pytest-xdist",
    "ruff",
]

[tool.ruff]
# Matches the dominant style of the existing code; do not reformat wholesale.
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F",  # full pycodestyle + pyflakes
    "I",    # import sorting (isort)
    "UP",   # pyupgrade: prefer modern syntax available on our minimum Python
    "B",    # flake8-bugbear: likely bugs and design problems
    "C4",   # flake8-comprehensions: simplify collection literals/calls
    "A",    # flake8-builtins: don't shadow Python builtins
    "ISC",  # implicit string concatenation mistakes
    "PIE",  # flake8-pie: misc lints (duplicate class fields, useless spread, ...)
    "RET",  # flake8-return: consistent return statements
    "PT",   # flake8-pytest-style: idiomatic pytest tests
    "RUF",  # ruff-specific rules
]
ignore = [
    # Mutable class attributes are idiomatic as declarations in Flask config
    # objects and SQLAlchemy models (e.g. __mapper_args__), which is nearly
    # every class-level dict/list in this codebase.
    "RUF012",
]
# Typographic characters that are intentional in our (mostly Swedish)
# user-facing strings, not lookalike typos: en dash and curly apostrophe.
allowed-confusables = ["–", "’"]

[tool.ruff.lint.flake8-bugbear]
# Lazy gettext strings are evaluated per-request, so they are safe (and
# idiomatic, in WTForms) as argument defaults, unlike plain gettext.
extend-immutable-calls = ["flask_babel.lazy_gettext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*_test.py"
